add banner page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                             <img class="article__preview" src="./assets/img/bmw.png" alt="article-preview">
                             <div class="article__date" pubdate datetime="2.20.2023">2.20.2023</div>
                             <h3 class="article__title">Watch demis video review</h3>
-                            <p class="article__text">Watch demis tested reviewed by our customer Watch demis tested reviewed by our customer Watch demis tested reviewed by our customer </p>
+                            <p class="article__text text-banner">Watch demis tested reviewed by our customer Watch demis tested reviewed by our customer Watch demis tested reviewed by our customer </p>
                             <a class="news__link" src="#">Learn more
                                 <img class="learn-more__icon" src="./assets/icons/learn-more.png" alt="learn-more">
                             </a>
@@ -35,13 +35,20 @@
                             <img class="article__preview" src="./assets/img/jaguar.png" alt="article-preview">
                             <div class="article__date" pubdate datetime="2.20.2023">2.20.2023</div>
                             <h3 class="article__title">Watch demis video review</h3>
-                            <p class="article__text">Watch demis tested reviewed by our customer Watch demis tested reviewed by our customer Watch demis tested reviewed by our customer </p>
+                            <p class="article__text text-banner">Watch demis tested reviewed by our customer Watch demis tested reviewed by our customer Watch demis tested reviewed by our customer </p>
                             <a class="news__link" src="#">Learn more
                                 <img class="learn-more__icon" src="./assets/icons/learn-more.png" alt="learn-more">
                             </a>
                         </article>
                     </div>
                 </div>
+                <a class="link__allnews" href="./news/news-demis.html">
+                    <button class="banner__button" >Все новости</button>
+                </a>
+                <br>
+                <a class="link__feedback" href="./feedback/feedback.html">
+                    <button class="banner__button" >Обратная связь</button>
+                </a>
             </div>
         </section>
     </body>
