--- a/feedback/feedback.html
+++ b/feedback/feedback.html
@@ -47,7 +47,7 @@
                         
                     </div>
                     <div v-show="name.length >= 3">
-                            <button>
+                            <button class="banner__button feedback-btn">
                                 <a src="#">Отправить<a/>
                             </button>
                         </div>
